# Prex

./: README.md  meson.build
cpuinfo/: cpuinfo.c  cpuinfo.h  main.c  meson.build
misc/: execbn.c  execbn.h
